--- a/sobre.html
+++ b/sobre.html
@@ -19,7 +19,7 @@
 
 
 		<p>
-			Nosso centro de distribuição fica em Jacarezinho, no Paraná. De lá, saem 48 aviões que 
+			Nosso centro de distribuição fica em <a href="https://www.google.com/maps/place/Jacarezinho">Jacarezinho, no Paraná</a>. De lá, saem 48 aviões que 
 			distribuem nossos produtos às casas do mundo todo. Nosso centro de distribuição:
 		</p>
 
@@ -32,7 +32,7 @@
 			
 		<p>
 			Compre suas roupas e acessórios na Mirror Fashion. Acesse nossa loja ou entre em contato 
-			se tiver dúvidas. Conheça também nossa história e nossos diferenciais.
+			se tiver dúvidas. Conheça também nossa <a href="index.html">história e nossos diferenciais.</a>
 		</p>
 
 
@@ -45,9 +45,9 @@
 		</figure>
 
 		<p>
-			A fundação em 1932 ocorreu no momento da descoberta econônica do interior do Paraná. A 
+			A fundação em 1932 ocorreu no momento da descoberta econônica do interior do Paraná. <strong>A 
 			família Pelho, tradicional da região, investiu todas as suas economias nessa nova iniciativa, 
-			revolucionária para a época. O fundador Eduardo Simões Pelho, dotado de particular visão 
+			revolucionária para a época.</strong> O fundador Eduardo Simões Pelho, dotado de particular visão 
 			administrativa, guiou os negócios da empresa durante mais de 50 anos, muitos deles ao lado 
 			de seu filho E. S. Pelho Filho, atual CEO. O nome da empresa é inspirado no nome da família.
 		</p> 
@@ -70,5 +70,6 @@
 			homenagens e condecorações. Todos os presidentes do Brasil já visitaram as instalações da Mirror 
 			Fashion, além de presidentes da União Européia, Ásia e o secretário-geral da ONU.
 		</p>
+		<center><strong><a href="index.html">Pagina Inicial</a></strong></center>
 </body>
 </html>
