Implementaçao (DIV) Web e (ID) no CSS

--- a/sobre.html
+++ b/sobre.html
@@ -23,7 +23,7 @@
 			distribuem nossos produtos às casas do mundo todo. Nosso centro de distribuição:
 		</p>
 
-		<figure>
+		<figure id="Centro">
 			
 				<img src="mirror2.png" alt="Centro da Mirror Fashion"> 
 				<figcaption> Centro da Mirror Fashion</figcaption>
@@ -39,7 +39,7 @@
 
 
 	<h2><em>História</em></h2>
-		<figure>
+		<figure id="familia">
 			<img src="mirror3.png" alt="Familia Mirror"> 
 			<figcaption> Familia Mirror</figcaption>
 		</figure>
@@ -71,5 +71,6 @@
 			Fashion, além de presidentes da União Européia, Ásia e o secretário-geral da ONU.
 		</p>
 		<center><strong><a href="index.html">Pagina Inicial</a></strong></center>
+		<div id="rodape"><img src="logo-rodape.png"></div>
 </body>
 </html>
