Implementaçao Web da pagina inicial

--- a/index.html
+++ b/index.html
@@ -2,11 +2,32 @@
 
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="index.css">
 	<title>Pagina Inicial</title>
 </head>
 <body>
-	<center><img src="mirror.png"></center>
-	<h1>Pagina Inicial</h1>
+
+	<h1><img src="mirror.png" alt="Mirror Fashion"></h1> 
+
+	<p class="sacola">Nenhum item na sacola de compras  </p> 
+	<nav>
+		
+		<ul>
+			<li><a href=""> Sua Conta</a></li>
+			<li><a href="">Lista de desejos</a></li>
+			<li><a href="">Cartao Fidelidade</a></li>
+			<li><a href="sobre.html">Sobre</a></li>
+			<li><a href="">Ajuda</a></li>
+		</ul>
+
+	</nav>
+	
+	
+
+	
+	
+
+	
 
 
 </body>
