Organizaçao do diretorio /img

--- a/sobre.html
+++ b/sobre.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-	<img src="mirror.png">
+	<img src="img/logo.png">
 
 	<h1><em>A Mirror Fashion</em></h1>
 
@@ -25,8 +25,8 @@
 
 		<figure id="Centro">
 			
-				<img src="mirror2.png" alt="Centro da Mirror Fashion"> 
-				<figcaption> Centro da Mirror Fashion</figcaption>
+				<img src="img/centro-distribuicao.png" alt="Centro de distribuicao Mirror Fashion"> 
+				<figcaption> Centro de distribuicao Mirror Fashion </figcaption>
 			
 		</figure>
 			
@@ -40,7 +40,7 @@
 
 	<h2><em>História</em></h2>
 		<figure id="familia">
-			<img src="mirror3.png" alt="Familia Mirror"> 
+			<img src="img/familia-pelho.jpg" alt="Familia Mirror"> 
 			<figcaption> Familia Mirror</figcaption>
 		</figure>
 
@@ -71,6 +71,6 @@
 			Fashion, além de presidentes da União Européia, Ásia e o secretário-geral da ONU.
 		</p>
 		<center><strong><a href="index.html">Pagina Inicial</a></strong></center>
-		<div id="rodape"><img src="logo-rodape.png"></div>
+		<div id="rodape"><img src="img/logo-rodape.png"></div>
 </body>
 </html>
