--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-	<h1><img src="mirror.png" alt="Mirror Fashion"></h1> 
+	<h1><img src="img/logo.png" alt="Mirror Fashion"></h1> 
 
 	<p class="sacola">Nenhum item na sacola de compras  </p> 
 	<nav>
