Implementaçao do reset.css

--- a/index.html
+++ b/index.html
@@ -2,27 +2,30 @@
 
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="Reset.css">
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<title>Pagina Inicial</title>
 </head>
 <body>
 
-	<h1><img src="img/logo.png" alt="Mirror Fashion"></h1> 
+	<header class="container">
+	
+		<h1><img src="img/logo.png" alt="Mirror Fashion"></h1> 
 
 	<p class="sacola"> Nenhum item na sacola de compras  </p> 
-	<nav>
-		
-		<ul>
-			<li><a href=""> Sua Conta</a></li>
-			<li><a href="">Lista de desejos</a></li>
-			<li><a href="">Cartao Fidelidade</a></li>
-			<li><a href="sobre.html">Sobre</a></li>
-			<li><a href="">Ajuda</a></li>
-		</ul>
 
-	</nav>
-	
-	
+		<nav class="menu-opcoes">
+		
+			<ul>
+				<li><a href="">Sua Conta</a></li>
+				<li><a href="">Lista de desejos</a></li>
+				<li><a href="">Cartao Fidelidade</a></li>
+				<li><a href="sobre.html">Sobre</a></li>
+				<li><a href="">Ajuda</a></li>
+			</ul>
+
+		</nav>
+	</header>
 
 	
 	
