--- a/sobre.html
+++ b/sobre.html
@@ -2,6 +2,8 @@
 
 <html>
 <head>
+	<//link rel="stylesheet" type="text/css" href="Reset.css">
+
 	<link rel="stylesheet" type="text/css" href="sobre.css">
 	<title> Mirror Fashion </title>
 	<meta charset="utf-8">
