Organizaçao de pastas

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="Reset.css">
-	<link rel="stylesheet" type="text/css" href="index.css">
+	<link rel="stylesheet" type="text/css" href="css/Reset.css">
+	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<title>Pagina Inicial</title>
+	<meta charset="utf-8">
 </head>
 <body>
 
@@ -26,12 +27,5 @@
 
 		</nav>
 	</header>
-
-	
-	
-
-	
-
-
 </body>
 </html>
