--- a/sobre.html
+++ b/sobre.html
@@ -2,9 +2,8 @@
 
 <html>
 <head>
-	<//link rel="stylesheet" type="text/css" href="Reset.css">
-
-	<link rel="stylesheet" type="text/css" href="sobre.css">
+	<link rel="stylesheet" type="text/css" href="css/Reset.css">
+	<link rel="stylesheet" type="text/css" href="css/sobre.css">
 	<title> Mirror Fashion </title>
 	<meta charset="utf-8">
 </head>
@@ -74,6 +73,6 @@
 			Fashion, além de presidentes da União Européia, Ásia e o secretário-geral da ONU.
 		</p>
 		<center><strong><a href="index.html">Pagina Inicial</a></strong></center>
-		<div id="rodape"><img src="img/logo-rodape.png"></div>
+		<footer id="rodape"><img src="img/logo-rodape.png"></footer> 
 </body>
 </html>
